tests/baselines/reference/exportDeclareClass1.errors.txt
==== tests/cases/compiler/exportDeclareClass1.ts (2 errors) ====
        export declare class eaC {
            static tF() { };
                           ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
            static tsF(param:any) { };
                                     ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
        };
        
        export declare class eaC2 {
            static tF();
            static tsF(param:any);
        };